--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,6 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+# Uploaded media files (contains sensitive ID documents)
+media/
+projectsite/media/
