--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ charset-normalizer==3.4.4
 cryptography==46.0.3
 Django==5.2.8
 django-allauth==65.13.1
+dotenv==0.9.9
 Faker==38.0.0
 idna==3.11
 jwt==1.4.0
 pillow==12.0.0
 pycparser==2.23
 PyJWT==2.10.1
+python-dotenv==1.2.1
 requests==2.32.5
 sqlparse==0.5.3
 tzdata==2025.2
