--- a/projectsite/.gitignore
+++ b/projectsite/.gitignore
@@ -214,3 +214,7 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+# Uploaded media files (contains sensitive ID documents)
+media/
+projectsite/media/
+**/agents.md
